<resources>
    <string name="app_name">实时语音测试</string>
    <string name="appid">appid:</string>
    <string name="project_id">projectId:</string>
    <string name="secret_id">secretId:</string>
    <string name="secret_key">secretKey:</string>

    <string name="input_config_first">请先输入配置信息</string>
    <string name="start">启动</string>
    <string name="read_config">读取配置</string>
    <string name="invalid_para">appid或者projectId输入无效</string>
    <string name="start_record">识别状态：开始录音</string>
    <string name="end_record">识别状态：停止录音</string>
    <string name="start_recognize">识别状态：语音流识别开始</string>
    <string name="end_recognize">识别状态：语音流识别结束</string>
    <string name="start_voice">识别状态：语音流开始</string>
    <string name="end_voice">识别状态：语音流结束</string>
    <string name="volume">音量：</string>
    <string name="start_voice_timeout">识别状态：开始说话超时</string>
    <string name="end_voice_timeout">识别状态：结束说话超时</string>
    <string name="cant_stop">识别状态：不存在该任务，无法停止</string>
    <string name="cant_cancel">识别状态：不存在该任务，无法取消</string>
    <string name="read_config_success">读取配置文件成功</string>
    <string name="read_config_failed">读取配置文件失败</string>
    <string name="config_not_exist">配置文件不存在</string>
    <string name="must_input">必填</string>
    <string name="can_input">选填</string>
    <string name="confirm_config">请确认信息</string>
    <string name="confirm">确认</string>

</resources>
